# proofreader

./: .gitignore  README.md  a.py  data.yaml  main.py  pyproject.toml  readme.md  repo_flattened.txt  requirements.txt
.github/workflows/: build.yml  publish.yaml  publish.yml
configs/: config.yaml
core/: config.py  detector.py  engine.py  matcher.py  ocr.py  resolver.py  schema.py
downloader/: main.py  usplash.py
downloader/buffers/: 0.json  1.json  2.json
generator/: dx.py  extract.py  main.py  predict.py  predict2.py  pull.py  pull2.py  train.py  view.py
scripts/: setup_items.py  train_model.py
src/assets/: class_map.json  class_mapping.json
src/proofreader/: __init__.py  main.py
src/proofreader/core/: __init__.py  config.py  detector.py  engine.py  matcher.py  ocr.py  schema.py
src/proofreader/train/: buil2.py  builder.py  clip_trainer.py  train.py  train_embed.py  train_swin.py  yolo_trainer.py
src/proofreader/train/config/: data.yaml
src/proofreader/train/emulator/: augmenter.js  generator.py
train/: builder.py  train.py
train/emulator/: augmenter.js  config.py  generator.py
