[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbx-proofreader"
version = "1.2.0"
description = "Visual trade detection and OCR engine"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

authors = [
    { name = "Luca Rose" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "easyocr>=1.7.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "rapidfuzz>=3.0.0",
    "requests>=2.31.0",
    "torch>=2.0.0",
    "tqdm>=4.66.0",
    "transformers>=4.30.0",
    "ultralytics>=8.0.0"
]

[project.optional-dependencies]
train = ["playwright>=1.40.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["proofreader*"]
